test: use null-tolerant spoils fixture