@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotSame;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import org.bukkit.Material;
@@ -19,7 +20,7 @@ final class SpoilsEntryTest {
     @Test
     void constructorFiltersNullsAndClonesInputItems() {
         ItemStack diamonds = new ItemStack(Material.DIAMOND, 2);
-        SpoilsEntry entry = entry(List.of(diamonds, null));
+        SpoilsEntry entry = entry(Arrays.asList(diamonds, null));
 
         diamonds.setAmount(40);
 
